--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,3 +1,4 @@
+// tsconfig.app.json
 {
   "compilerOptions": {
     "composite": true,
@@ -5,6 +6,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "outDir": "dist"
+  },
+  "include": ["src"]
 }
