--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@farcaster/frame-sdk": "latest",
-    "@farcaster/frame-wagmi-connector": "latest",
+    "@farcaster/frame-wagmi-connector": "^0.0.27",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@rainbow-me/rainbowkit": "^2.2.5",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "5.45.1",
     "class-variance-authority": "^0.7.1",
@@ -25,8 +26,8 @@
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
-    "viem": "latest",
-    "wagmi": "latest"
+    "viem": "^2.29.4",
+    "wagmi": "^2.15.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
